--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -19,6 +19,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'home' %}">Dashboard </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'products' %}">Products</a>
+        </li>
 
         {% else %}
         <li class="nav-item">
@@ -28,6 +31,7 @@
       </ul>
     </div>
     <span class = "hello-msg">Hello, {{ request.user }} </span>
+    <span><a class = "hello-msg" href="{% url 'account' %}">Profile </a></span>
     <span><a class = "hello-msg" href="{% url 'logout' %}">Logout </a></span>
 
   </nav>
